--- a/website/package.json
+++ b/website/package.json
@@ -14,8 +14,11 @@
     "@vueuse/core": "^12.5.0",
     "@vueuse/firebase": "^12.5.0",
     "@vueuse/integrations": "^12.5.0",
+    "axios": "^1.7.9",
     "firebase": "^11.3.0",
     "nanoid": "^5.0.9",
+    "pdfjs-dist": "^4.10.38",
+    "primevue": "^4.2.5",
     "sortablejs": "^1.15.6",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
