--- a/website/package.json
+++ b/website/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
+    "@primevue/themes": "^4.2.5",
     "@vueuse/core": "^12.5.0",
     "@vueuse/firebase": "^12.5.0",
     "@vueuse/integrations": "^12.5.0",
@@ -18,6 +19,7 @@
     "firebase": "^11.3.0",
     "nanoid": "^5.0.9",
     "pdfjs-dist": "^4.10.38",
+    "primeicons": "^7.0.0",
     "primevue": "^4.2.5",
     "sortablejs": "^1.15.6",
     "vue": "^3.5.13",
