--- a/functions/package.json
+++ b/functions/package.json
@@ -15,8 +15,11 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@acobb/firepower": "^1.2.0",
+    "@genkit-ai/googleai": "^1.0.4",
     "firebase-admin": "^12.1.0",
-    "firebase-functions": "^5.0.0"
+    "firebase-functions": "^5.0.0",
+    "genkit": "^1.0.4"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.12.0",
