--- a/functions/package.json
+++ b/functions/package.json
@@ -2,6 +2,7 @@
   "name": "functions",
   "scripts": {
     "lint": "eslint --ext .js,.ts .",
+    "lint:fix": "eslint --ext .js,.ts . --fix",
     "build": "tsc",
     "build:watch": "tsc --watch",
     "serve": "npm run build && firebase emulators:start --only functions",
@@ -15,20 +16,21 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "@acobb/firepower": "^1.2.0",
+    "@acobb/firepower": "^1.13.0",
     "@genkit-ai/googleai": "^1.0.4",
     "firebase-admin": "^12.1.0",
     "firebase-functions": "^5.0.0",
-    "genkit": "^1.0.4"
+    "genkit": "^1.0.4",
+    "openai": "^4.83.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.12.0",
-    "@typescript-eslint/parser": "^5.12.0",
-    "eslint": "^8.9.0",
+    "@typescript-eslint/eslint-plugin": "^7.0.1",
+    "@typescript-eslint/parser": "^7.0.1",
+    "eslint": "^8.56.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-import": "^2.29.1",
     "firebase-functions-test": "^3.1.0",
-    "typescript": "^4.9.0"
+    "typescript": "^5.5.0"
   },
   "private": true
 }
