--- a/website/package.json
+++ b/website/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
-    "@acobb/firepower": "^1.2.0",
+    "@acobb/firepower": "^1.11.0",
     "@headlessui/vue": "^1.7.23",
     "@primevue/themes": "^4.2.5",
     "@vueuse/core": "^12.5.0",
@@ -34,6 +34,7 @@
     "autoprefixer": "^10.4.17",
     "eslint": "^9.18.0",
     "eslint-plugin-vue": "^9.32.0",
+    "path": "^0.12.7",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "vite": "^6.0.11",
